# high-assurance-crypto

./: .gitignore  Makefile  README.md  dune-project  evocrypt.opam  ha-mpc.md
high-assurance-mpc/: Dockerfile  Makefile  Makefile.common  README.md
high-assurance-mpc/config/: tests.config
high-assurance-mpc/extraction/: Makefile  README.md  _tags  myocamlbuild.ml
high-assurance-mpc/extraction/src/: benchmark.ml
high-assurance-mpc/extraction/src/ECLib/: ECList.ml  PrimeField.ml
high-assurance-mpc/extraction/src/General/: CRPRF.ml  Utils.ml
high-assurance-mpc/extraction/src/MPC/: AGate.ml
high-assurance-mpc/extraction/src/SecretSharing/: ASecretSharingScheme.ml  Shamir.ml
high-assurance-mpc/proof/: Makefile  README.md
high-assurance-mpc/proof/config/: tests.config
high-assurance-mpc/proof/src/Functionalities/: AFunctionality.ec  AGateFunctionality.ec  AdditionFunctionality.ec  MultiplicationFunctionality.ec  SMultiplicationFunctionality.ec
high-assurance-mpc/proof/src/General/: FieldPolynomial.ec  ListExt.ec
high-assurance-mpc/proof/src/MPC/: AGate.ec  GatePrivacy.ec
high-assurance-mpc/proof/src/SecretSharing/: ASecretSharingScheme.ec  SecretSharingSchemeSecurity.ec  Shamir.ec
high-assurance-zk/: README.md
high-assurance-zk/config/: cloc.exclude  cloc.langdef  cloc_bgw.files  cloc_bgw_unverified.files  cloc_maurer.files  cloc_maurer_unverified.files
high-assurance-zk/extraction/: Makefile
high-assurance-zk/extraction/src/: benchmark.ml  jsonload.ml  jsonload.mli
high-assurance-zk/extraction/src/Circuit/: ACircuit.ml  ArithmeticCircuit.ml
high-assurance-zk/extraction/src/ECLib/: Core.ml  ECList.ml  PrimeField.ml
high-assurance-zk/extraction/src/General/: Utils.ml
high-assurance-zk/extraction/src/InTheHead/: InTheHead.ml  ShamirBGWSha256InTheHead.ml
high-assurance-zk/extraction/src/MPC/: AGate.ml  AProtocol.ml  WeakPrivacyComposition.ml
high-assurance-zk/implementation-bgw/: Makefile  README.md
high-assurance-zk/implementation-bgw/benchs/: circuit1000-mul.json  circuit10000-add.json  circuit10000-mul.json  circuit100000-add.json  circuit100000-mul.json
high-assurance-zk/implementation-bgw/src/: json_utils.ml  jsonload.ml  jsonload.mli
high-assurance-zk/implementation-bgw/tests/: circuit2.json
high-assurance-zk/implementation-maurer/: MPC_boolean.s  MPC_small_modulus.s  example.json
high-assurance-zk/implementation-maurer/src/: benchmark_boolean.ml
high-assurance-zk/lpzk/: Dockerfile  Makefile  README.md
high-assurance-zk/lpzk/config/: tests.config
high-assurance-zk/lpzk/extraction/list/: Makefile  dune-project  lpzk-list.opam
high-assurance-zk/lpzk/extraction/list/src/: dune  lpzk_exec.ml
high-assurance-zk/lpzk/extraction/list/src/common/: LPZK.ml  dune  jsonload.ml  utils.ml
high-assurance-zk/mith/: Dockerfile  Makefile  Makefile.common
high-assurance-zk/mith-bgw/: Makefile  README.md
high-assurance-zk/mith-maurer/tools/: Error.hs  Location.hs  ML.hs  Main.hs  Pretty.hs  Syntax.hs  Tokens.hs  ecml.cabal
high-assurance-zk/mith/config/: cloc_abstract.files  cloc_jasmin.files  dependencies.opam  tests.config
high-assurance-zk/mith/generic-mith/: README.md
high-assurance-zk/mith/implementation-maurer/: Makefile  README.md  _tags  maurer_25519.c  maurer_boolean.c  maurer_small_modulus.c  myocamlbuild.ml  sha3.c  shake128-m.c  shake128-m.h  shake128.s
high-assurance-zk/mith/mith-maurer/: Makefile  README.md
high-assurance-zk/proof/: Dockerfile  Makefile  README.md  easycrypt.conf  run.sh
lib/: dune  evocrypt.ml  evocrypt.mli  random.ml  random.mli
lib/circuit/: aCircuit.ml  arithmeticCircuit.ml
lib/commitment/: aCommitment.ml  commitment.mli
lib/commitment/cr-prf-commitment/: CRPRF.ml  CRPRFCommitment.ml  SHA3Commitment.ml
lib/eclib/: ecCyclicGroup.ml  ecLib.mli  ecList.ml  ecPrimeField.ml
lib/mpc/: MPC.mli  aGate.ml  aMPCProtocol.ml  weakPrivacyComposition.ml
lib/mpc/arithmetic-protocol/: additionGate.ml  arithmeticProtocol.ml  multiplicationGate.ml  sMultiplicationGate.ml
lib/mpc/bgw/: BGW.ml  BGWAddition.ml  BGWMultiplication.ml  BGWProtocol.ml  BGWRefresh.ml  BGWSMultiplication.ml  BGWWeak.ml
lib/secret-sharing/: aSecretSharing.ml  secretSharing.ml  shamir.ml
lib/zarith/: fieldPolynomial.ml  fieldPolynomial.mli  zarith.mli
lib/zk/: ASigmaProtocol.ml  AZKProtocol.ml  LPZK.ml  LPZK.mli  ZK.mli
lib/zk/mpc-in-the-head/: MitH.ml  ShamirBGWSha3MitH.ml
proof/: Dockerfile  Makefile  README.md
proof/config/: easycrypt.conf  tests.config
proof/src/semantics/: ALanguage.ec
proof/src/utilities/: Array.ec
proof/src/zarith/: CyclicGroup.ec  PrimeField.ec
test/: dune  test_evocrypt.ml
(+358 files in other folders)
