(include_subdirs unqualified)

(library
 (name EVOCrypt)
 (public_name evocrypt)
 (modules EVOCrypt
          FieldPolynomial
          ACircuit ArithmeticCircuit 
          ACommitment CRPRFCommitment CRPRF
            SHA3Commitment 
          EcCore EcCyclicGroup EcList EcOption EcPrimeField 
          ASecretSharing Shamir
          AGate AMPCProtocol AdditionGate MultiplicationGate SMultiplicationGate ArithmeticProtocol WeakPrivacyComposition
            BGWProtocol BGWAddition BGWMultiplication BGWSMultiplication BGWRefresh BGWWeak
          AZKProtocol ASigmaProtocol
            MitH ShamirBGWSha3MitH
            LPZK)
 (libraries zarith cryptokit domainslib)
 (flags
  (:standard -w -26-27-32-33-34-39)))
