Name:               ecml
Version:            0.0.1
Description:        simple easycrypt to ml translator
License:            GPL
Author:             Hugo Pacheco
Maintainer:         Hugo Pacheco <hpacheco@gmail.com>
Bug-reports:        mailto:hpacheco@gmail.com
Stability:          experimental
Homepage:           
Category:           Compiler, Cryptography, Language
Build-Type:         Simple
Cabal-Version:      >=1.6
Tested-with:        GHC==7.10.2
Synopsis:           ec to ml

Extra-Source-Files: 
Data-files: 

Library
  exposed-modules:
                        Lexer
                        Tokens
                        Error
                        Location
                        Position
                        Pretty
                        Syntax
                        Parser
  Other-Modules:
                        Paths_ecml
  Hs-Source-Dirs: .
  Build-Depends:     base, array, split, transformers, containers, bytestring, syb, linguistic-ordinals >= 0.1.0.1, pretty, mtl, parsec, safe, digits, exceptions, filepath, hashable, lifted-base, transformers-base, monad-control
  Build-Tools:      alex

Executable ecml
  main-is: Main.hs
  Other-Modules:
      Lexer 
      ML
      Paths_ecml
  Hs-Source-Dirs: .
  Build-Depends:     base, array, split, transformers, containers, bytestring, syb, linguistic-ordinals >= 0.1.0.1, pretty, mtl, parsec, safe, digits, exceptions, filepath, hashable, lifted-base, transformers-base, monad-control, cmdargs, shelly, text
  Build-Tools:      alex